# avito-mint-bot

./: .env  admin_dashboard.html  admin_routes.py  app.py  bot.py  broadcast.html  festival_bot.db  main.py  models.py  pyproject.toml  quest_manager.py  render.yaml  requirements.txt  sticker_generator.py
instance/: festival_bot.db
templates/: participants.html
