[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.7",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.27.0",
    "replicate>=1.0.7",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
]
